--- a/index.html
+++ b/index.html
@@ -4,5 +4,6 @@
     <h2>งานที่ 1 </h2>
     <h2>งานที่ 2 </h2>
     <h2>งานที่ 3 </h2>
+    <h2>โดย น.ส.สุวรินทร์ โพธิ์ตาก 653380028-0 </h2>
   </body>
 </html>
