--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <html>
   <body>
     <h1>วิชา SC310006 Mobile Web Application</h1>
-    <h2>งานที่ 1 </h2>
-    <h2>งานที่ 2 </h2>
-    <h2>งานที่ 3 </h2>
-    <h2>โดย น.ส.สุวรินทร์ โพธิ์ตาก 653380028-0 </h2>
+    <url>
+    <li>งานที่ 1 </li>
+    <li>งานที่ 2 </li>
+    <li>งานที่ 3 </li>
+    </url>
+    โดย น.ส.สุวรินทร์ โพธิ์ตาก 653380028-0
   </body>
 </html>
