--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
       <li>งานที่ 3 </li>
     </ul>
     
-    โดย น.ส.สุวรินทร์ โพธิ์ตาก 653380028-0
+    โดย น.ส.สุวรินทร์ โพธิ์ตาก 653380028-0 sec 1
   </body>
 </html>
