--- a/work1.html
+++ b/work1.html
@@ -60,27 +60,189 @@ function displayQuiz(i,q){
 
   var quizlist = [
     {
-        "title": "ลำธารไหลผ่านหมู่บ้านแห่งหนึ่ง เป็นลำธารที่สำคัญที่ช่วยหล่อเลี้ยงชีวิตของผู้คนในหมู่บ้าน ลำธารมีสีน้ำที่ใสสะอาด จนสามารถสังเกตเห็นก้อนกรวดใต้ลำธารได้ชัดเจน ภายในลำธารพบสิ่งมีชีวิตมากมาย ไม่ว่าจะเป็นปลาหลากชนิดที่แหวกว่าย เหงือกขยับคอยรับออกซิเจนจากน้ำ บ้างก็หลบอยู่ใต้หินเพื่อรอเหยื่อ หอยน้ำจืดหลากสีที่กำลังคืบคลานหาอาหารริมลำธาร ตัวอ่อนแมลงปอที่อำพลางตัวจนกลมกลืนกับพืชน้ำเพื่อหลบผู้ล่า <br>คำว่า ลำธาร ในข้อความมีความสอดคล้องข้อใดมากที่สุด",
-        "options": [
-            "ประชากร",
-            "แหล่งที่อยู่",
-            "ชีวภูมิภาค",
-            "ระบบนิเวศ",
-            "กลุ่มสิ่งมีชีวิต"
-        ],
-        "answer": 4
+  "questions": [
+    {
+      "question": "การล้างมือควรทำเมื่อไหร่?",
+      "options": [
+        "หลังจากเล่นข้างนอก",
+        "ก่อนอาหาร",
+        "หลังจากทำการบ้าน"
+      ],
+      "correct_answer": "ก่อนอาหาร"
     },
     {
-        "title": "10+15=?",
-        "options": [
-            "15",
-            "20",
-            "25",
-            "30",
-            "35"
-        ],
-        "answer": 3
+      "question": "การออกกำลังกายช่วยอะไร?",
+      "options": [
+        "ช่วยให้ร่างกายอ่อนแอ",
+        "ช่วยให้ร่างกายแข็งแรง",
+        "ช่วยให้รู้สึกเครียด"
+      ],
+      "correct_answer": "ช่วยให้ร่างกายแข็งแรง"
+    },
+    {
+      "question": "อาหารที่ดีสำหรับร่างกายคืออะไร?",
+      "options": [
+        "อาหารทอดมัน",
+        "ผักและผลไม้",
+        "ขนมหวาน"
+      ],
+      "correct_answer": "ผักและผลไม้"
+    },
+    {
+      "question": "สิ่งใดไม่ใช่การดูแลสุขภาพ?",
+      "options": [
+        "นอนหลับให้เพียงพอ",
+        "ดื่มน้ำมากๆ",
+        "นั่งเล่นเกมทั้งวัน"
+      ],
+      "correct_answer": "นั่งเล่นเกมทั้งวัน"
+    },
+    {
+      "question": "การดื่มน้ำสำคัญอย่างไร?",
+      "options": [
+        "ช่วยให้ผิวแห้ง",
+        "ช่วยให้ร่างกายทำงานได้ดี",
+        "ทำให้เราหิวมากขึ้น"
+      ],
+      "correct_answer": "ช่วยให้ร่างกายทำงานได้ดี"
+    },
+    {
+      "question": "การนอนหลับไม่เพียงพอจะทำให้เกิดอะไร?",
+      "options": [
+        "ทำให้ร่างกายแข็งแรง",
+        "ทำให้เรารู้สึกสดชื่น",
+        "ทำให้ร่างกายอ่อนแอ"
+      ],
+      "correct_answer": "ทำให้ร่างกายอ่อนแอ"
+    },
+    {
+      "question": "การออกไปข้างนอกในตอนแดดร้อนควรทำอย่างไร?",
+      "options": [
+        "ใส่หมวกและทาครีมกันแดด",
+        "ออกไปโดยไม่ต้องทำอะไร",
+        "พกน้ำเย็นไปดื่ม"
+      ],
+      "correct_answer": "ใส่หมวกและทาครีมกันแดด"
+    },
+    {
+      "question": "การกินขนมหวานบ่อยๆ ทำให้เกิดอะไร?",
+      "options": [
+        "ทำให้ฟันแข็งแรง",
+        "ทำให้เสี่ยงต่อฟันผุ",
+        "ทำให้เรามีสุขภาพดี"
+      ],
+      "correct_answer": "ทำให้เสี่ยงต่อฟันผุ"
+    },
+    {
+      "question": "การบ้วนปากหลังทานอาหารทำไมสำคัญ?",
+      "options": [
+        "เพื่อล้างอาหารที่ติดฟัน",
+        "ทำให้ฟันเป็นสีขาว",
+        "เพื่อลดความร้อนในปาก"
+      ],
+      "correct_answer": "เพื่อล้างอาหารที่ติดฟัน"
+    },
+    {
+      "question": "การดื่มน้ำมากๆ ดีอย่างไร?",
+      "options": [
+        "ช่วยให้ร่างกายมีพลังงาน",
+        "ช่วยให้ร่างกายทำงานได้ดี",
+        "ทำให้เราอ้วนขึ้น"
+      ],
+      "correct_answer": "ช่วยให้ร่างกายทำงานได้ดี"
+    },
+    {
+      "question": "การทำความสะอาดร่างกายสำคัญเพราะอะไร?",
+      "options": [
+        "เพื่อป้องกันการเจ็บป่วย",
+        "เพื่อให้ร่างกายมีกลิ่นหอม",
+        "เพื่อเพิ่มความแข็งแรงของร่างกาย"
+      ],
+      "correct_answer": "เพื่อป้องกันการเจ็บป่วย"
+    },
+    {
+      "question": "การเล่นเกมในระยะเวลานานๆ มีผลอย่างไร?",
+      "options": [
+        "ทำให้สุขภาพตาแย่ลง",
+        "ทำให้ร่างกายแข็งแรง",
+        "ช่วยให้จิตใจสงบ"
+      ],
+      "correct_answer": "ทำให้สุขภาพตาแย่ลง"
+    },
+    {
+      "question": "การใช้โทรศัพท์มือถือมากเกินไปจะทำให้เกิดอะไร?",
+      "options": [
+        "ทำให้เรารู้สึกมีความสุข",
+        "ทำให้เรามีสุขภาพดี",
+        "ทำให้เรามีปัญหาสุขภาพตา"
+      ],
+      "correct_answer": "ทำให้เรามีปัญหาสุขภาพตา"
+    },
+    {
+      "question": "การใช้ร่างกายในการออกกำลังกายทำให้เกิดอะไร?",
+      "options": [
+        "ทำให้เราเหนื่อยล้า",
+        "ทำให้ร่างกายแข็งแรง",
+        "ทำให้ร่างกายอ่อนแอ"
+      ],
+      "correct_answer": "ทำให้ร่างกายแข็งแรง"
+    },
+    {
+      "question": "การบริโภคอาหารที่มีไขมันมากๆ จะทำให้เกิดอะไร?",
+      "options": [
+        "ทำให้เรามีรูปร่างดี",
+        "ทำให้เกิดปัญหาหัวใจ",
+        "ช่วยให้เราผอมลง"
+      ],
+      "correct_answer": "ทำให้เกิดปัญหาหัวใจ"
+    },
+    {
+      "question": "การกินอาหารที่มีเส้นใยสูงช่วยอะไร?",
+      "options": [
+        "ช่วยในการย่อยอาหาร",
+        "ช่วยให้เราหิวบ่อยขึ้น",
+        "ช่วยให้ร่างกายอ้วนขึ้น"
+      ],
+      "correct_answer": "ช่วยในการย่อยอาหาร"
+    },
+    {
+      "question": "การนั่งสมาธิช่วยอะไร?",
+      "options": [
+        "ทำให้ร่างกายเหนื่อยล้า",
+        "ทำให้จิตใจสงบ",
+        "ทำให้สุขภาพร่างกายดีขึ้น"
+      ],
+      "correct_answer": "ทำให้จิตใจสงบ"
+    },
+    {
+      "question": "การไม่ดื่มน้ำทำให้เกิดอะไร?",
+      "options": [
+        "ทำให้ผิวแห้งและร่างกายไม่สดชื่น",
+        "ทำให้รู้สึกสดชื่น",
+        "ทำให้รู้สึกเบิกบาน"
+      ],
+      "correct_answer": "ทำให้ผิวแห้งและร่างกายไม่สดชื่น"
+    },
+    {
+      "question": "การยืนตรงและไม่ก้มหลังช่วยอะไร?",
+      "options": [
+        "ช่วยให้เรามีรูปร่างดี",
+        "ช่วยให้เราเดินเร็วขึ้น",
+        "ทำให้เรารู้สึกเหนื่อยมากขึ้น"
+      ],
+      "correct_answer": "ช่วยให้เรามีรูปร่างดี"
+    },
+    {
+      "question": "การดื่มน้ำเย็นมีข้อดีอย่างไร?",
+      "options": [
+        "ทำให้เรารู้สึกเย็นสบาย",
+        "ทำให้เราเจ็บคอ",
+        "ทำให้ร่างกายอ่อนแอ"
+      ],
+      "correct_answer": "ทำให้เรารู้สึกเย็นสบาย"
     }
+  ]
+}
 ];
 
 </script>
