--- a/work1.html
+++ b/work1.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>work 1: แบบทดสอบ ม.1</title>
+  <title>work 1: แบบทดสอบวิชาสุขศึกษา </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
@@ -11,7 +11,7 @@
 <body>
 
 <div class="container-fluid p-5 bg-primary text-white text-center">
-  <h1>แบบทดสอบ เข้าม.1</h1>
+  <h1>แบบทดสอบวิชาสุขศึกษา</h1>
   
 </div>
   
