--- a/work2.html
+++ b/work2.html
@@ -1,128 +1,188 @@
 <!DOCTYPE html>
-<html>
+<html lang="th">
+
 <head>
-<title>แบบทดสอบ</title>
-<style>
-  /* เพิ่ม CSS สำหรับการจัดรูปแบบที่นี่ */
-  body {
-      font-family: sans-serif;
-      background-color: #FFF8E1; /* สีพื้นหลังเหลืองอ่อน */
-      color: #5F5F5F; /* สีข้อความสีเทาเข้มสำหรับการอ่านง่าย */
-      margin: 0;
-      padding: 0;
-  }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>แบบทดสอบ</title>
+  <link href="https://cdn.jsdelivr.net/npm/@mdi/font/css/materialdesignicons.min.css" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/vue@3.2.45/dist/vue.global.prod.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vuetify@3.1.5/dist/vuetify.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/vuetify@3.1.5/dist/vuetify.min.css" rel="stylesheet">
+  <style>
+ /* ปรับแต่งกรอบคำถาม */
 
-  h1 {
+ .bg-primary {
+  background-color: #FFF9C4; /* สีเหลืองอ่อน */
+  color: #ff6a00; /* สีทอง */
+  text-align: center;
+  font-size: 2rem;
+  font-weight: bold;
+  padding: 40px 0;
+  border-radius: 8px;
+  width: 100%;
+}
+ .my-1 {
+  border: 2px solid #ff8800;
+  border-radius: 8px;
+  padding: 10px;
+  margin: 10px 0;
+  background-color: #FFF8E1; /* สีเหลืองอ่อน */
+}
+   h3 {
+  color: #FFB300;
+  font-size: 1.5rem;
+  font-weight: bold;
+  text-align: center;
+}
+    /* เพิ่มกรอบคำถามแต่ละข้อ */
+    .question-card {
+      border: 2px solid #8e8e8e; /* กรอบสีเทาอ่อน */
+      padding: 16px;
+      border-radius: 8px; /* มุมโค้ง */
+      margin-bottom: 16px;
+      background-color: #ffffff; /* พื้นหลังคำถามเป็นสีขาว */
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* เงาเล็กน้อย */
+      transition: all 0.3s ease;
+    }
+
+    /* เมื่อโฮเวอร์ที่กรอบคำถาม */
+    .question-card:hover {
+      transform: translateY(-5px); /* ยกกรอบขึ้นเล็กน้อย */
+      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15); /* เงาชัดเจนขึ้น */
+    }
+    .v-btn:hover {
+      background-color: #FBC02D; /* สีเหลืองเข้ม */
+      box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.2); /* เงาที่ชัดเจนขึ้น */
+      transform: scale(1.05); /* ขยายขนาดเล็กน้อยเมื่อ hover */
+    }
+  
+    .v-btn:active {
+      background-color: #F57F17; /* เมื่อคลิกปุ่ม */
+      transform: scale(0.98); /* ย่อขนาดเล็กน้อยเมื่อกด */
+    }
+  
+    /* ปรับพื้นหลังให้สวยงาม */
+    .bg-primary {
+      background-color: #FFF9C4; /* สีเหลืองอ่อน */
+      color: #FFB300; /* สีทอง */
       text-align: center;
-      color: #F9A825; /* สีข้อความหัวข้อเป็นเหลืองทอง */
-      padding: 20px;
-      background-color: #FFEB3B; /* สีพื้นหลังหัวข้อเป็นเหลืองสด */
-      margin-bottom: 20px;
-      font-size: 2rem;
+      font-size: 1.5rem;
+      font-weight: 600;
+      padding: 30px 0;
+      border-radius: 8px 8px 0 0;
+      width: 100%;
+    }
+    .v-btn {
+    background-color: #fcdca4; /* สีเหลือง */
+    color: #000000;
+    padding: 10px 20px;  /* เพิ่มขนาดปุ่ม */
+    text-align: center;
+    font-weight: bold;
+    display: block;
+    width: 100%;  
+    margin-top: 30px;      /* เพิ่มช่องว่างด้านบน */
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
+    transition: all 0.3s ease;
   }
-
-  #quiz {
-      margin: 0 auto;
-      max-width: 600px;
-      padding: 20px;
-      background-color: #FFEE58; /* พื้นหลังของคำถามเป็นสีเหลืองอ่อน */
-      border-radius: 8px;
-  }
-
-  .question {
-      margin-bottom: 15px;
-      font-size: 1.2rem;
-      color: #6A4E00; /* สีข้อความคำถามเป็นสีน้ำตาลอมเหลือง */
-  }
-
-  button {
-      display: block;
-      width: 200px;
-      margin: 20px auto;
-      padding: 10px;
-      background-color: #FFEB3B; /* สีปุ่มเป็นสีเหลือง */
-      border: none;
-      border-radius: 8px;
-      color: #5F5F5F; /* สีข้อความในปุ่ม */
-      font-size: 1rem;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-  }
-
-  button:hover {
-      background-color: #F9A825; /* เปลี่ยนสีปุ่มเมื่อชี้เมาส์ */
-  }
-
-  #results {
-      text-align: center;
-      padding: 10px;
-      font-size: 1.2rem;
-      color: #6A4E00; /* สีข้อความผลลัพธ์ */
-  }
-</style>
+  </style>
+  
 </head>
+
 <body>
-  <h1>แบบทดสอบ</h1>
-  <div id="quiz"></div>
-  <button id="submit">ตรวจคำตอบ</button>
-  <div id="results"></div>
+  <div id="app">
+    <v-app>
+<!-- หน้าเริ่มต้น -->
+<div class="pa-4 bg-primary">แบบทดสอบ</div>
+<div v-if="page === 1" class="center">
+  <v-btn @click="page = 2" >เริ่มทำแบบทดสอบ</v-btn>
+</div>
+
+      
+
+
+      <!-- หน้าแบบทดสอบ -->
+      <div v-if="page === 2">
+        <div v-for="(q, i) in qlist" :key="i" class="my-1 pa-4 border-info">
+          <div>ข้อที่ {{ i + 1 }}</div>
+          <div v-html="q.title" class="pa-2"></div>
+          <v-radio-group v-model="answers[i]" class="mt-3">
+            <v-radio v-for="(otxt, ov) in q.options" :key="ov" :value="ov" class="d-flex align-center">
+              <template #label>
+                {{ otxt }}
+              </template>
+            </v-radio>
+          </v-radio-group>
+        </div>
+
+        <div class="position-sticky bottom-0 pa-4 bg-primary">
+          <v-btn v-if="validate()" @click="grading()">
+            <v-icon>mdi-check</v-icon>ตรวจคำตอบ
+          </v-btn>
+          <div v-else>กรุณาตอบให้ครบ</div>
+        </div>
+      </div>
+
+      <!-- หน้าแสดงคะแนน -->
+      <div v-if="page === 3">
+        <div>คุณได้คะแนน {{ score }} จาก {{ qlist.length }} คะแนน</div>
+        <v-btn @click="page = 1">กลับไปยังหน้าเริ่มต้น</v-btn>
+      </div>
+    </v-app>
+  </div>
 
   <script>
-    // ใส่โค้ด Javascript ที่นี่ (จากขั้นตอนที่ 2)
-    const quizContainer = document.getElementById('quiz');
-    const resultsContainer = document.getElementById('results');
-    const submitButton = document.getElementById('submit');
+    const { createApp } = Vue;
+    const { createVuetify } = Vuetify;
 
-    fetch('quiz2.json') // เปลี่ยนชื่อไฟล์ถ้าจำเป็น
-      .then(response => response.json())
-      .then(questions => {
-        let output = [];
+    const vuetify = createVuetify(); // สร้าง Vuetify instance
 
-        questions.forEach(
-          (currentQuestion, questionNumber) => {
-            let answers = [];
-
-            for(letter in currentQuestion.options){
-              answers.push(
-                `<label>
-                  <input type="radio" name="question${questionNumber}" value="${letter}">
-                  ${currentQuestion.options[letter]}
-                </label>`
-              );
-            }
-
-            output.push(
-              `<div class="question">${currentQuestion.title}</div>
-               <div class="answers">${answers.join('')}</div>`
-            );
+    const app = createApp({
+      data() {
+        return {
+          qlist: [],          // รายการคำถาม
+          answers: [],        // คำตอบที่ผู้ใช้เลือก
+          score: 0,           // คะแนน
+          page: 1,            // หน้า (1: เริ่มต้น, 2: แบบทดสอบ, 3: ผลลัพธ์)
+        };
+      },
+      mounted() {
+        this.load_data();
+      },
+      methods: {
+        // โหลดข้อมูลคำถามจากไฟล์ JSON
+        async load_data() {
+          try {
+            const res = await fetch("quiz2.json");
+            this.qlist = await res.json();
+            this.answers = new Array(this.qlist.length).fill(null);
+          } catch (error) {
+            console.error("Error loading data:", error);
           }
-        );
+        },
 
-        quizContainer.innerHTML = output.join('');
-      });
+        // ตรวจสอบว่าได้ตอบครบทุกข้อหรือไม่
+        validate() {
+          return this.answers.every(answer => answer !== null);
+        },
 
-
-    submitButton.addEventListener('click', function() {
-      const answers = [];
-      const questions = document.querySelectorAll('.question');
-      questions.forEach((question, index) => {
-        const selectedOption = document.querySelector(`input[name="question${index}"]:checked`);
-        answers.push(selectedOption ? selectedOption.value : null);
-      });
-
-      fetch('quiz2.json') // เปลี่ยนชื่อไฟล์ถ้าจำเป็น
-        .then(response => response.json())
-        .then(questions => {
-          let score = 0;
-          answers.forEach((answer, index) => {
-              if (answer !== null && parseInt(answer) === questions[index].answer) {
-                  score++;
-              }
+        // การคำนวณคะแนน
+        grading() {
+          let n = 0;
+          this.answers.forEach((answer, index) => {
+            if (answer === this.qlist[index].answer) {
+              n++;
+            }
           });
-
-          resultsContainer.innerHTML = `คุณได้คะแนน ${score} จาก ${questions.length} คะแนน`;
-        });
+          this.score = n;
+          this.page = 3;  // ไปหน้าแสดงผลคะแนน
+        },
+      },
     });
+
+    app.use(vuetify).mount("#app"); // เพิ่ม Vuetify instance ให้ Vue
   </script>
+
 </body>
+
 </html>
