--- a/index.html
+++ b/index.html
@@ -1,12 +1,78 @@
-<html>
-  <body>
-    <h1>วิชา SC310006 Mobile and Web Application Development</h1>
-    <ul>
-      <li>งานที่ 1 </li>
-      <li>งานที่ 2 </li>
-      <li>งานที่ 3 </li>
-    </ul>
-    
-    โดย น.ส.สุวรินทร์ โพธิ์ตาก 653380028-0 sec 1
-  </body>
+<!DOCTYPE html>
+<html lang="th">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>วิชา SC310006 Mobile and Web Application Development</title>
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      background-color: #e4edf8; /* สีพื้นหลังอ่อนๆ */
+      color: #333; /* สีข้อความ */
+      line-height: 1.6;
+      padding: 20px;
+      margin: 0;
+    }
+
+    h1 {
+      color: #1b4b72; 
+      font-size: 2.5rem;
+      text-align: center;
+      margin-bottom: 20px;
+    }
+    h2 {
+      color: #1b4b72; 
+      text-align: center;
+      margin-bottom: 20px;
+    }
+
+    ul {
+      list-style-type: none; /* ลบจุดหน้าแต่ละรายการ */
+      padding: 0;
+      text-align: center;
+    }
+
+    li {
+      background-color: #ffffff; /* สีส้มอ่อน */
+      border-radius: 8px;
+      margin: 10px 0;
+      padding: 15px;
+      font-size: 1.2rem;
+      transition: transform 0.3s ease, background-color 0.3s ease;
+    }
+
+    li:hover {
+      transform: scale(1.05); /* ขยายขนาดเมื่อโฮเวอร์ */
+      background-color: #FFDAB9; /* เปลี่ยนสีพื้นหลังเมื่อโฮเวอร์ */
+    }
+
+    a {
+      text-decoration: none;
+      color: #2972ae; 
+      font-weight: bold;
+      transition: color 0.3s ease;
+    }
+
+    a:hover {
+      color: #351d15; /* สีส้มเข้มเมื่อโฮเวอร์ */
+    }
+
+    p {
+      text-align: center;
+      font-size: 1.6rem;
+      color: #153854; /* สีน้ำเงินม่วง */
+      margin-top: 30px;
+    }
+  </style>
+</head>
+<body>
+  <h1>วิชา SC310006 Mobile and Web Application Development</h1>
+  <ul>
+    <li><a href="work1.html">งานที่ 1</a></li>
+    <li><a href="work2.html">งานที่ 2</a></li>
+    <li>งานที่ 3</li>
+  </ul>
+
+  <p><h2>โดย น.ส.สุวรินทร์ โพธิ์ตาก 653380028-0 sec 1</h2></p>
+</body>
 </html>
