--- a/work2.html
+++ b/work2.html
@@ -10,100 +10,93 @@
   <script src="https://cdn.jsdelivr.net/npm/vuetify@3.1.5/dist/vuetify.js"></script>
   <link href="https://cdn.jsdelivr.net/npm/vuetify@3.1.5/dist/vuetify.min.css" rel="stylesheet">
   <style>
- /* ปรับแต่งกรอบคำถาม */
-
- .bg-primary {
-  background-color: #FFF9C4; /* สีเหลืองอ่อน */
-  color: #ff6a00; /* สีทอง */
-  text-align: center;
-  font-size: 2rem;
-  font-weight: bold;
-  padding: 40px 0;
-  border-radius: 8px;
-  width: 100%;
-}
- .my-1 {
-  border: 2px solid #ff8800;
-  border-radius: 8px;
-  padding: 10px;
-  margin: 10px 0;
-  background-color: #FFF8E1; /* สีเหลืองอ่อน */
-}
-   h3 {
-  color: #FFB300;
-  font-size: 1.5rem;
-  font-weight: bold;
-  text-align: center;
-}
-    /* เพิ่มกรอบคำถามแต่ละข้อ */
-    .question-card {
-      border: 2px solid #8e8e8e; /* กรอบสีเทาอ่อน */
-      padding: 16px;
-      border-radius: 8px; /* มุมโค้ง */
-      margin-bottom: 16px;
-      background-color: #ffffff; /* พื้นหลังคำถามเป็นสีขาว */
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* เงาเล็กน้อย */
-      transition: all 0.3s ease;
+    /* ปรับสีพื้นหลังอ่อนสบายตา */
+    body {
+      font-family: 'Arial', sans-serif;
+      background-color: #f1f8e9; /* สีเขียวอ่อน */
+      margin: 0;
+      padding: 0;
     }
 
-    /* เมื่อโฮเวอร์ที่กรอบคำถาม */
-    .question-card:hover {
-      transform: translateY(-5px); /* ยกกรอบขึ้นเล็กน้อย */
-      box-shadow: 0 6px 15px rgba(0, 0, 0, 0.15); /* เงาชัดเจนขึ้น */
-    }
-    .v-btn:hover {
-      background-color: #FBC02D; /* สีเหลืองเข้ม */
-      box-shadow: 0px 6px 15px rgba(0, 0, 0, 0.2); /* เงาที่ชัดเจนขึ้น */
-      transform: scale(1.05); /* ขยายขนาดเล็กน้อยเมื่อ hover */
-    }
-  
-    .v-btn:active {
-      background-color: #F57F17; /* เมื่อคลิกปุ่ม */
-      transform: scale(0.98); /* ย่อขนาดเล็กน้อยเมื่อกด */
-    }
-  
-    /* ปรับพื้นหลังให้สวยงาม */
+    /* ปรับแต่งส่วน header */
     .bg-primary {
-      background-color: #FFF9C4; /* สีเหลืองอ่อน */
-      color: #FFB300; /* สีทอง */
+      background-color: #a5d6a7; /* สีเขียวอ่อน */
+      color: #2c6b45; /* สีเขียวเข้ม */
+      text-align: center;
+      font-size: 2rem;
+      font-weight: bold;
+      padding: 40px 0;
+      border-radius: 8px;
+      width: 100%;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .my-1 {
+      border: 2px solid #81c784;
+      border-radius: 8px;
+      padding: 20px;
+      margin: 15px 0;
+      background-color: #ffffff;
+    }
+
+    /* ปรับแต่งกรอบคำถาม */
+    .question-card {
+      border: 2px solid #c8e6c9;
+      padding: 20px;
+      border-radius: 8px;
+      margin-bottom: 20px;
+      background-color: #ffffff;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+    }
+
+    /* ปรับแต่งปุ่ม */
+    .v-btn {
+      background-color: #81c784; /* สีเขียวอ่อน */
+      color: #fff;
+      padding: 12px 25px;
+      font-weight: bold;
+      text-align: center;
+      display: block;
+      width: 100%;
+      margin-top: 20px;
+      border-radius: 6px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+    }
+
+    .v-btn:hover {
+      background-color: #66bb6a; /* สีเขียวเข้ม */
+    }
+
+    /* ฟอนต์ของคำถาม */
+    h3 {
+      color: #388e3c; /* สีเขียวเข้ม */
+      font-size: 1.5rem;
+      font-weight: bold;
+      text-align: center;
+    }
+
+    /* ปรับแต่งการแสดงคะแนน */
+    .score-display {
       text-align: center;
       font-size: 1.5rem;
-      font-weight: 600;
-      padding: 30px 0;
-      border-radius: 8px 8px 0 0;
-      width: 100%;
+      color: #388e3c; /* สีเขียวเข้ม */
+      margin-top: 20px;
     }
-    .v-btn {
-    background-color: #fcdca4; /* สีเหลือง */
-    color: #000000;
-    padding: 10px 20px;  /* เพิ่มขนาดปุ่ม */
-    text-align: center;
-    font-weight: bold;
-    display: block;
-    width: 100%;  
-    margin-top: 30px;      /* เพิ่มช่องว่างด้านบน */
-    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.15);
-    transition: all 0.3s ease;
-  }
   </style>
-  
 </head>
 
 <body>
   <div id="app">
     <v-app>
-<!-- หน้าเริ่มต้น -->
-<div class="pa-4 bg-primary">แบบทดสอบ</div>
-<div v-if="page === 1" class="center">
-  <v-btn @click="page = 2" >เริ่มทำแบบทดสอบ</v-btn>
-</div>
-
-      
-
+      <!-- หน้าเริ่มต้น -->
+      <div class="pa-4 bg-primary">แบบทดสอบ</div>
+      <div v-if="page === 1" class="center">
+        <v-btn @click="page = 2">เริ่มทำแบบทดสอบ</v-btn>
+      </div>
 
       <!-- หน้าแบบทดสอบ -->
       <div v-if="page === 2">
-        <div v-for="(q, i) in qlist" :key="i" class="my-1 pa-4 border-info">
+        <div v-for="(q, i) in qlist" :key="i" class="question-card">
           <div>ข้อที่ {{ i + 1 }}</div>
           <div v-html="q.title" class="pa-2"></div>
           <v-radio-group v-model="answers[i]" class="mt-3">
@@ -125,7 +118,7 @@
 
       <!-- หน้าแสดงคะแนน -->
       <div v-if="page === 3">
-        <div>คุณได้คะแนน {{ score }} จาก {{ qlist.length }} คะแนน</div>
+        <div class="score-display">คุณได้คะแนน {{ score }} จาก {{ qlist.length }} คะแนน</div>
         <v-btn @click="page = 1">กลับไปยังหน้าเริ่มต้น</v-btn>
       </div>
     </v-app>
