--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <ul>
     <li><a href="work1.html">งานที่ 1</a></li>
     <li><a href="work2.html">งานที่ 2</a></li>
-    <li>งานที่ 3</li>
+    <li><a href="work3.html">งานที่ 3</a></li>
   </ul>
 
   <p><h2>โดย น.ส.สุวรินทร์ โพธิ์ตาก 653380028-0 sec 1</h2></p>
