--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@
     <li><a href="work1.html">งานที่ 1</a></li>
     <li><a href="work2.html">งานที่ 2</a></li>
     <li><a href="work3.html">งานที่ 3</a></li>
+    <li><a href="work4.html">งานที่ 4</a></li>
   </ul>
 
   <p><h2>โดย น.ส.สุวรินทร์ โพธิ์ตาก 653380028-0 sec 1</h2></p>
