--- a/work4.html
+++ b/work4.html
@@ -9,27 +9,25 @@
 
 <body>
     <a-scene>
-        <a-entity gltf-model="image/Chicken.glb" position="0 1 -3" scale="1 1 1" rotation="0 0 0"></a-entity>
+        <a-assets>
+            <a-assets-item id="tree" src="./imgmodel/cartoon_girl/scene.gltf"></a-asset-item>
+                <a-assets-item id="cat" src="./imgmodel/cats/scene.gltf"></a-asset-item>
+        </a-assets>
+        <a-sky color="#605757" src="w2.jpg"></a-sky>
+
+        <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
+        <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
+        <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
+        <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
 
         <!-- โมเดลตัวแทนตนเอง -->
-        <a-entity gltf-model="image/Chicken.glb" position="0 0 -3" scale="0.5 0.5 0.5"
-            animation-mixer="clip:*"></a-entity>
-
-        <!-- โมเดลไก่หมุน -->
-        <a-entity gltf-model="image/Chicken.glb" position="-2 1 -4" scale="0.5 0.5 0.5"
-            animation="property: rotation; to: 0 360 0; loop: true; dur: 4000">
-        </a-entity>
-
-        <!-- โมเดลไก่กระเด้งขึ้นลง -->
-        <a-entity gltf-model="image/Chicken.glb" position="2 0.5 -3" scale="0.5 0.5 0.5"
-            animation="property: position; dir: alternate; dur: 2000; loop: true; to: 2 1.5 -3">
-        </a-entity>
-
-        <!-- แสง -->
+        <!-- <a-entity gltf-model="#tree" position="0 3 -4" scale="10 10 10"></a-entity>
+        <a-entity gltf-model="#cat" modify-materials></a-entity> -->
+        <a-entity gltf-model="./imgmodel/cartoon_girl/scene.gltf" position="0 1.5 -2" scale="1 1 1"></a-entity>
+        <a-entity gltf-model="./imgmodel/cats/scene.gltf" position="0 0 -2" scale="1 1 1"></a-entity>
         <a-light type="ambient" color="#ffffff" intensity="0.5"></a-light>
         <a-light type="spot" position="0 5 -2" angle="45" intensity="1"></a-light>
-
-        <!-- ข้อความ -->
+        <a-light type="directional" color="#ffffff" intensity="1" position="0 10 0"></a-light>
         <a-text value="Suwarin Photak 653380028-0 sec 2" position="0 3 -4" align="center" color="#000000"
             scale="2 2 2"></a-text>
         <a-text value="I like to eat fried chicken with ginger juice." position="0 2.5 -4" align="center"
