--- a/work4.html
+++ b/work4.html
@@ -13,12 +13,7 @@
             <a-assets-item id="tree" src="./imgmodel/cartoon_girl/scene.gltf"></a-asset-item>
                 <a-assets-item id="cat" src="./imgmodel/cats/scene.gltf"></a-asset-item>
         </a-assets>
-        <a-sky color="#605757" src="w2.jpg"></a-sky>
-
-        <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9"></a-box>
-        <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E"></a-sphere>
-        <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D"></a-cylinder>
-        <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4"></a-plane>
+        <a-sky color="#ffffff" src="w2.jpg"></a-sky>
 
         <!-- โมเดลตัวแทนตนเอง -->
         <!-- <a-entity gltf-model="#tree" position="0 3 -4" scale="10 10 10"></a-entity>
