--- a/work4.html
+++ b/work4.html
@@ -16,8 +16,8 @@
         
         <a-sky color="#ffffff" src="w2.jpg"></a-sky>
 
-        <a-entity gltf-model="./imgmodel/chicken guy.glb" position="2 -1.5 -3" scale=" 1 1 1"></a-entity>
-        <a-entity gltf-model="./imgmodel/chicken guy.glb" position="-2 -1.5 -3" scale=" 1 1 1"></a-entity>
+        <a-entity gltf-model="./imgmodel/Chicken.glb" position="-2 -1.5 -3" scale="0.01 0.01 0.01" animation__rotate="property: rotation; to: 0 360 0; dur: 3000; easing: linear; loop: true"></a-entity>
+        <a-entity gltf-model="./imgmodel/Chicken.glb" position="2 -1.5 -3" scale="0.01 0.01 0.01" animation__rotate="property: rotation; to: 0 -360 0 ; dur: 3000; easing: linear; loop: true"></a-entity>
 
         <a-entity gltf-model="./imgmodel/Island.glb" position="-1 -2.9 -2.5" scale=" 0.2 0.1 0.19"></a-entity>
 
@@ -39,7 +39,7 @@
         </a-entity>
         <a-text value="Suwarin Photak 653380028-0 sec 1 " position="0 3 -4" align="center" color="#000000"
             scale="2 2 2"></a-text>
-        <a-text value="I like to eat fried chicken with ginger juice YUM YUM." position="0 2.5 -4" align="center"
+        <a-text value="I like to eat fried chicken with ginger juice YUMMY." position="0 2.5 -4" align="center"
             color="#000000" scale="2 2 2"></a-text>
     </a-scene>
 </body>
