--- a/index.html
+++ b/index.html
@@ -72,6 +72,8 @@
     <li><a href="work2.html">งานที่ 2</a></li>
     <li><a href="work3.html">งานที่ 3</a></li>
     <li><a href="work4.html">งานที่ 4</a></li>
+    <li><a href="work5.html">งานที่ 5</a></li>
+    <li><a href="work6.html">งานที่ 6</a></li>
   </ul>
 
   <p><h2>โดย น.ส.สุวรินทร์ โพธิ์ตาก 653380028-0 sec 1</h2></p>
